# maple-engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md
assets/shaders/: shader.slang
engine/: CMakeLists.txt  app.cpp  app.h
engine/core/: application.cpp  application.h  engine.cpp  engine.h
engine/file/: CMakeLists.txt  file.cpp  file.h
engine/logging/: CMakeLists.txt  log_macros.h
engine/maple_asset/: CMakeLists.txt  maple_asset.cpp  maple_asset.h
engine/maple_asset_loader/: CMakeLists.txt  maple_asset_loader.cpp  maple_asset_loader.h
engine/maple_audio/: CMakeLists.txt  maple_audio.cpp  maple_audio.h  ring_buffer.h
engine/maple_core/: CMakeLists.txt  camera.cpp  camera.h  engine.cpp  engine.h  input.cpp  input.h  input_enums.h  noise.cpp  noise.h  prng.cpp  prng.h  seed.cpp  seed.h  time.cpp  time.h
engine/maple_logging/: CMakeLists.txt  log.cpp  log.h
engine/maple_physics/: CMakeLists.txt  helpers.h  maple_physics.cpp  maple_physics.h
engine/maple_renderer/: CMakeLists.txt  enums.cpp  enums.h  maple_renderer.cpp  maple_renderer.h  material.h  material_builder.h  material_builder_data.h  mesh_data.h  pool.h  render_graph.h  render_target.h  renderer_callbacks.h  sampler_enums.h  sampler_info.h  shader_compilation.cpp  shader_compilation.h  vk_device_features.h  vk_enum_translation.h  vk_instance_ctx.h  vk_logical_device.h  vk_physical_device.h  vk_renderer_ctx.cpp  vk_renderer_ctx.h  vk_swapchain.h
engine/maple_renderer/slang/include/: slang-tag-version.h
engine/maple_renderer/vkm/: vkm_allocator.h  vkm_buffer.h  vkm_descriptor_pool.h  vkm_descriptor_sets.h  vkm_image.h  vkm_mesh.h  vkm_pipeline.h  vkm_pipeline_layout.h  vkm_sampler.h
engine/maple_scene/: CMakeLists.txt  maple_scene.h
engine/maple_window/: CMakeLists.txt  enums.h  maple_window.cpp  maple_window.h
engine/renderer/: CMakeLists.txt  buffer.h  mesh.h  renderer.cpp  renderer.h  renderer_callbacks.h  renderer_vma.cpp  vk_buffer.h  vk_context.h  vk_device_features.h  vk_graphics_pipeline.h  vk_header.h  vk_image.h  vk_instance_ctx.h  vk_logical_device.h  vk_memory_manager.h  vk_physical_device.h  vk_physical_device_selector.h  vk_queue_family_indices.h  vk_sampler.h  vk_swapchain.h  vk_texture.h  vk_utils.h
engine/renderer/mvk/: mvk_allocator.h  mvk_descriptor_manager.h  mvk_descriptor_pool.h  mvk_descriptor_sets.h  mvk_pipeline.h
engine/renderer/vkh/: vkh_image.h  vkh_transition_image_layout.h
engine/renderer/vkm/: vkm_allocator.h  vkm_descriptor_pool.h  vkm_descriptor_sets.h  vkm_image.h  vkm_mesh.h  vkm_pipeline.h  vkm_sampler.h
runtime/: CMakeLists.txt  main.cpp
runtime/assets/shaders/: shader.vert
